[package]
name        = "tagua-parser"
version     = "0.1.0"
authors     = ["Ivan Enderlin <ivan.enderlin@tagua.io>"]
repository  = "https://github.com/tagua-vm/parser"
description = "Safe, fast and memory efficient PHP parser (lexical and syntactic analysers)."
readme      = "README.md"
keywords    = ["php", "virtual machine", "parser", "lexical", "syntactic", "analyser"]
license     = "BSD-3-Clause"

[lib]
name    = "tagua_parser"
path    = "source/lib.rs"
test    = true
doctest = true
bench   = true
doc     = true
harness = true

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[dependencies]
lazy_static = "~0.1"
regex       = "~0.1"

[dependencies.nom]
version  = "^1.2.3"
features = ["regexp", "regexp_macros"]

[dev-dependencies]
quickcheck = "~0.3"
