[package]
name        = "tagua-parser"
version     = "0.1.0"
authors     = ["Ivan Enderlin <ivan.enderlin@tagua.io>"]
repository  = "https://github.com/tagua-vm/parser"
description = "Safe, fast and memory efficient PHP parser (lexical and syntactic analysers)."
readme      = "README.md"
keywords    = ["php", "parser", "lexical", "syntactics", "analyser"]
license     = "BSD-3-Clause"

[lib]
name    = "tagua_parser"
path    = "source/lib.rs"
test    = true
doctest = true
bench   = true
doc     = true
harness = true

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.bench]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[features]
simd = ["bytecount/simd-accel"]
avx  = ["bytecount/avx-accel"]

[dependencies]
bytecount   = "^0.1"
lazy_static = "^0.2"
memchr      = "^1.0"
regex       = "^0.2"
smallvec    = "^0.4"
nom         = {"git" = "https://github.com/Geal/nom", "branch" = "master", "features" = ["regexp", "regexp_macros", "verbose-errors"]}

[dev-dependencies]
quickcheck        = "^0.3"
pretty_assertions = "^0.4"